@@ -125,6 +125,7 @@
               classpath="${env.S1AS_HOME}/lib/javaee.jar:${env.S1AS_HOME}/lib/gf-client.jar:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${simple.client}">
               <sysproperty key="org.omg.CORBA.ORBInitialPort" value="${orb.port}"/>
+              <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
         </java>
     </target>
 
