@@ -96,6 +96,8 @@
               failonerror="true"
               classpath="${assemble.dir}/${appname}-other.jar:${assemble.dir}/${appname}-web.war:${assemble.dir}/${appname}-pu.jar:${embedded.classpath}:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${se.client}">
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+           <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
            <arg line="${jndiroot}"/>
         </java>
     </target>
@@ -107,10 +109,12 @@
               failonerror="true"
               classpath="${assemble.dir}/tmp:${assemble.dir}/other:${embedded.classpath}:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${se.client}">
-           <arg line="${jndiroot}"/>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+           <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
 <!--
            <jvmarg value="-Dorg.glassfish.ejb.embedded.keep-temporary-files=true"/>
 -->
+           <arg line="${jndiroot}"/>
         </java>
     </target>
 
