@@ -119,6 +119,8 @@
               classpath="${env.S1AS_HOME}/lib/javaee.jar:${env.S1AS_HOME}/lib/gf-client.jar:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${se.client}">
            <sysproperty key="org.omg.CORBA.ORBInitialPort" value="${orb.port}"/>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+           <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
            <arg line="${jndiroot}"/>
            <arg line="anonymous"/>
         </java>
